COmmande WS docs swagger
