# commande/app/Http/Requests/CommandeRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreClientRequest extends FormRequest
+class CommandeRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,12 +24,10 @@ class StoreClientRequest extends FormRequest
     public function rules()
     {
         return [
-            'first_name' => 'required',
-            'last_name' => 'required',
-            'email' => 'required|unique:clients,email',
-            'login' => 'required|unique:clients,login',
-            'password' => 'required|min:5',
-            'phone' => 'required|numeric|digits:8',
+            'name' => 'required',
+            'description' => 'required',
+            'product_id' => 'required|numeric',
+            'quantity' => 'required|numeric',
         ];
     }
 }
